--- a/Pages/Cities/Cities.css
+++ b/Pages/Cities/Cities.css
@@ -5,7 +5,7 @@ header {
     position: relative;
     width: 100%;
     min-height: 1100px;
-    background: url("../../Images/Cyclist on Veloretti CafÃ©racer.png") no-repeat center center;
+    background: url("../../Images/Cyclist\ on\ Veloretti\ Caféracer.png") no-repeat center center;
     background-size: cover;
     background-position: center top;
     border-bottom: 1px solid var(--heavy-metal-10);
