--- a/shared.css
+++ b/shared.css
@@ -1,10 +1,16 @@
 ﻿
+
+
+
+/* animation of images */
 .animated-img {
     opacity: 0;
     transform: scale(0.96);
     transition: opacity 0.8s cubic-bezier(0.4,0,0.2,1), transform 1.3s cubic-bezier(0.4,0,0.2,1);
 }
 
+
+/* when java script add clss .visible this animatio will be invoked  */
 .animated-img.visible {
     opacity: 1;
     transform: scale(1);
